# mcp-sefaria-server

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  smithery.yaml
src/sefaria_jewish_library/: demo.py  sefaria_handler.py  server.py
