[project]
name = "sefaria_jewish_library"
version = "0.1.0"
description = "the jewish library, accessible to LLMs "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.1",
    "requests"
]

[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sefaria_jewish_library = "sefaria_jewish_library:main"

